# kv-cache-tier-persistence

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  demo.py  grafana_dashboard.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: __init__.py  azure_trace_loader.py  breakeven_analysis.py  experiment_runner.py  generate_figures.py  gpu_validation.ipynb  hit_rate_bench.py  latency_bench.py  merge_results.py  run_benchmarks.py  throughput_bench.py  tinyllama_integration.py  workload_generator.py  workload_simulator.py
benchmarks/results/: experiment_results_azure_aggregate.json  experiment_results_azure_raw.json  experiment_results_v3_aggregate.json  experiment_results_v3_raw.json  tinyllama_gpu_results.json  tinyllama_gpu_sweep.json  tinyllama_integration_results.json
docs/: architecture.md
models/: gbt_predictor.pkl  logistic_predictor.pkl  training_results.json
paper/: research_paper.md
paper/latex/: paper.tex  references.bib
src/kv_cache_tier/: __init__.py  config.py
src/kv_cache_tier/core/: __init__.py  cache_block.py  cache_metadata.py  session.py  tiered_manager.py
src/kv_cache_tier/eviction/: __init__.py  base.py  features.py  lru.py  ttl.py  (+5 more)
src/kv_cache_tier_persistence.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_azure_loader.py  test_cache_block.py  test_clock.py  test_eviction.py  test_integration.py  test_predictors.py  test_serialization.py  test_space_time.py  test_tiered_manager.py  test_tiers.py  test_workload_simulator.py
(+19 files in other folders)
