[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-cache-tier-persistence"
version = "0.1.0"
description = "Tiered KV cache persistence system for LLM inference"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
    "lz4>=4.3.0",
    "zstandard>=0.21.0",
    "boto3>=1.28.0",
    "aiofiles>=23.0",
    "rich>=13.0",
    "matplotlib>=3.7.0",
    "prometheus_client",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
kv-cache-bench = "benchmarks.run_benchmarks:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
